tests/ui/nll/polonius/nll-problem-case-3-issue-51526.nll.stderr
error[E0502]: cannot borrow `*queue` as mutable because it is also borrowed as immutable
  --> $DIR/nll-problem-case-3-issue-51526.rs:26:9
   |
LL | fn next(queue: &mut VecDeque<u32>, above: u32) -> Option<&u32> {
   |                - let's call the lifetime of this reference `'1`
...
LL |             let next = queue.front()?;
   |                        ----- immutable borrow occurs here
...
LL |         queue.pop_front();
   |         ^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
LL |     Some(result)
   |     ------------ returning this value requires that `*queue` is borrowed for `'1`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
